Expand processing region when novel kmers don't encompass the variant